add method studentbynameId